--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 py-3 wow fadeInUp">
-            <h1>Bienvenu sur le<br> Center de business</h1>
+            <h1>Bienvenu sur le<br> Business center</h1>
             <p class="text-grey mb-4">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Accusantium aperiam earum ipsa eius, inventore nemo labore eaque porro consequatur ex aspernatur. Explicabo, excepturi accusantium! Placeat voluptates esse ut optio facilis!</p>
             <a href="about.html" class="btn btn-primary">Learn More</a>
           </div>
@@ -154,7 +154,7 @@
 
   <div class="page-section">
     <div class="container">
-      <h1 class="text-center mb-5 wow fadeInUp" id="about">Ingenier polytechnicien</h1>
+      <h1 class="text-center mb-5 wow fadeInUp" id="about">Ingénieur polytechnicien</h1>
 
       <div class="owl-carousel wow fadeInUp" id="doctorSlideshow">
         <div class="item">
